# os_lab_2

./: CMakeLists.txt  README.md  main.c  run.sh
include/: monte_carlo.h
src/: monte_carlo.c
